--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -29,7 +29,7 @@ $grid-widths: (
 /// The amount of space between columns at different screen sizes.
 /// To use just one size, set the variable to a number instead of a map.
 /// @type Map | Length
-$grid-gutter: '20px' !default;
+$grid-gutter: 20px !default;
 
 /// Enable/disable responsive breakpoints
 /// @type Boolean
